Drafted extract subtest score summary

--- a/data/template.html
+++ b/data/template.html
@@ -21,7 +21,18 @@
         </tr>
     {% endfor %}
         </table>
+    <p>Student’s overall cognitive ability was assessed to be in the <i>{{composite['Full Scale IQ']['Qualitative Description']}}</i> range.</p>
+    <p>Verbal Comprehension</p>
+    <p>Student exhibited a <i>{{composite['Verbal Comprehension']['Qualitative Description']}}</i> performance compared to other children his age. </p>
+    <p>Visual Spatial</p>
+    <p>Student exhibited a <i>{{composite['Visual Spatial']['Qualitative Description']}}</i> performance compared to other children his age.</p>
+    <p>Fluid Reasoning</p>
+    <p>In this area, Student exhibited a <i>{{composite['Fluid Reasoning']['Qualitative Description']}}</i> performance compared to other children his age.</p>
+    <p>Working Memory</p>
+    <p>Student exhibited a <i>{{composite['Working Memory']['Qualitative Description']}}</i> performance compared to other children his age.</p>
+    <p>Processing Speed</p>
+    <p>Student exhibited a <i>{{composite['Processing Speed']['Qualitative Description']}}</i> performance compared to other children his age.</p>
 
-    <h2>Raw Scores Summary</h2>
+    <h2>Subtests Score Summary</h2>
 </body>
 </html>
