fixed math fluency bug

--- a/data/template.html
+++ b/data/template.html
@@ -202,7 +202,7 @@
             <li>Student had a <i>{{subtest_of_interest['qd']}}</i> performance in subtest_of_interest['name'], with a standard score of {{subtest_of_interest['Standard\nScore']}} and a percentile rank of {{ subtest_of_interest['Percentile\nRank']}}.</li>
             {% set subtest_of_interest = subtest['Math Fluency-Subtraction'] %}
             <li>Student had a <i>{{subtest_of_interest['qd']}}</i> performance in subtest_of_interest['name'], with a standard score of {{subtest_of_interest['Standard\nScore']}} and a percentile rank of {{ subtest_of_interest['Percentile\nRank']}}.</li>
-            {% set subtest_of_interest = wiat_composite['Math Fluency-Multiplication'] %}
+            {% set subtest_of_interest = subtest['Math Fluency-Multiplication'] %}
             <li>Student had a <i>{{subtest_of_interest['qd']}}</i> performance in subtest_of_interest['name'], with a standard score of {{subtest_of_interest['Standard\nScore']}} and a percentile rank of {{ subtest_of_interest['Percentile\nRank']}}.</li>
         </ul>
     </ul>
